--- a/.editorconfig
+++ b/.editorconfig
@@ -4,10 +4,12 @@
 root = true
 
 [*]
+end_of_line = crlf
 insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
+[{*.lua,*.xml}]
 indent_style = space
 indent_size = 4
 
