--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,11 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-[*.{lua,xml}]
+[*.lua]
+indent_style = space
+indent_size = 4
+
+[*.xml]
 indent_style = space
 indent_size = 4
 
