--- a/stylua.toml
+++ b/stylua.toml
@@ -1,6 +1,6 @@
 column_width = 1024
 line_endings = "Unix"
-indent_type = "Tabs"
+indent_type = "Spaces"
 indent_width = 4
 quote_style = "AutoPreferDouble"
 call_parentheses = "Always"
