--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ $RECYCLE.BIN/
 .vscode/settings.json
 *.editorconfig
 stylua.toml
-*/devstuff/
-*/devstuff/teststrings
-*/devstuff/doc.json
-*/devstuff/doc.md
+devstuff/
+devstuff/teststrings
+devstuff/doc.json
+devstuff/doc.md
+devstuff/luieglobals.lua
