Various updates & Outdated AbilityId removal
- Fix gitignore for "devstuff" folder
- Update a few debug functions to include my main account (@ArtOfShred)
- Fix Item disable for CA with LootLog enabled to check if LootLog exists first
- Removing AbilityId's that have been removed from the game from Debug/Effects & LUIE Spreadsheet
- Some corrections for Bombard

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,4 @@ $RECYCLE.BIN/
 .vscode/settings.json
 *.editorconfig
 stylua.toml
-*/devstuff/
-*/devstuff/teststrings
-*/devstuff/doc.json
-*/devstuff/doc.md
+devstuff/
