--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,7 @@ $RECYCLE.BIN/
 *.editorconfig
 stylua.toml
 devstuff/
-/.vscode/.ignore
+.vscode/.ignore
 .vscode/doc.json
+.vscode/test.py
+.vscode/Effects.lua
