--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 
 *.txt  eol=crlf
 *.lua  eol=crlf
+*.xml  eol=crlf
+*.md   eol=crlf
 
 *.dds binary
 *.DDS binary
@@ -10,3 +12,4 @@
 *.ico binary
 *.ttf binary
 *.otf binary
+*.slug binary
