--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,4 @@ $RECYCLE.BIN/
 ~$*
 *~
 
-/.vscode/
-frontend/Changelog_Definitions.lua
-frontend/CombatText_Definitions.lua
-frontend/CrowdControlTracker_Definitions.lua
+.vscode/*
